# TradingAgents

./: .env.example  .gitignore  .gitmodules  DEPENDENCIES.md  Dockerfile  GRAFANA_SETUP.md  INDEX_REPORT.md  MACOS_SETUP.md  README.md  api.py  basefunctionality.md  docker-compose.yml  infrastructure_update.md  instructions.md  main.py  prometheus.yml  pyproject.toml  requirements.txt  setup-macos.sh  test_prometheus.py  twikit_cookies.json
.github/workflows/: ci.yml  docker-smoke-test.yml  mvp-integration.yml
cli/: main.py
dashboard/: main.py
dashboard/static/: index.html  scripts.js  styles.css
envs/: core.txt  freqtrade-extra.txt
grafana/provisioning/alerting/: sharpe_ratio_alert.yml
grafana/provisioning/dashboards/: tradingagents-dashboard.json  tradingagents.yml
integration/: VERSIONS.toml  __init__.py  data.py  logging_utils.py  publish.py  risk.py  signal_gen.py
integration/adapter/: __init__.py
integration/config/: config.py  freqtrade-config.json
integration/schema/: signal.py
integration/scripts/: enrich_trade_results.py  measure_latency.py  push_test_signal.py  run_cycle.py  validate_core_integration.py  validate_log_integrity.py  validate_trade.py
integration/strategy/: AgentBridgeStrategy.py  __init__.py
integration/tests/: test_config_loader.py  test_data_layer.py  test_latency_measure_stub.py  test_log_integrity.py  test_logging_utils.py  test_publish_consume.py  test_risk_gate.py  test_run_cycle.py  test_schema_signal.py  test_signal_gen.py  test_strategy_bridge.py
scripts/: twikit_test_script.py
tests/: test_agents.py  test_backtest.py  test_base_agent.py  test_csv_source.py  test_graph.py  test_market.py  test_sentiment.py  test_twikit_source.py
tests/agents/: test_analysts.py  test_risk_manager.py  test_trader.py
tests/fixtures/: btc_hourly_small.csv
tradingagents/: __main__.py  config.py  default_config.py
tradingagents/agents/: __init__.py  base_agent.py
tradingagents/agents/analysts/: base_analyst.py  fundamentals_analyst.py  market_analyst.py  news_analyst.py  sentiment_analyst.py  social_media_analyst.py  technical_analyst.py
tradingagents/agents/managers/: research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/risk_mgmt/: aggresive_debator.py  conservative_debator.py  neutral_debator.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: agent_utils.py  memory.py
tradingagents/backtest/: metrics.py  replay_runner.py  runner.py
tradingagents/dataflows/: __init__.py  base_dataflow.py  config.py  finnhub.py  google_news.py  hyperliquid_utils.py  interface.py  news_utils.py  reddit.py  simfin.py  stockstats.py  stockstats_utils.py  twitter_utils.py  whale_alert_utils.py  yfin_utils.py  yfinance.py
tradingagents/graph/: __init__.py  conditional_logic.py  orchestrator.py  setup.py  trading_graph.py
tradingagents/sentiment/: model.py
tradingagents/sources/: tweet_source.py
