[tool.poetry]
name = "tradingagents"
version = "0.1.0"
description = "LLM-driven multi-agent trading platform"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tradingagents"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.26"
langchain-openai = "^0.3.27"
langgraph = "^0.5.3"
openai = "^1.30.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
websockets = "==11.0.3"  # 12.x removed websockets.asyncio – yfinance still needs it (2025-07-14)
httpx = "^0.27.0"
redis = "^5.0.4"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
feedparser = "^6.0.11"
pandas_ta = "^0.3.14b0"
yfinance = "^0.2.38"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
