[tool.poetry]
name = "tradingagents"
version = "0.1.0"
description = "LLM-driven multi-agent trading platform"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "tradingagents"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.26"
langchain-openai = "^0.3.27"
langgraph = "^0.5.3"
openai = "^1.30.1"
pandas = "^2.2.2"
numpy = "^1.26.4"
websockets = "==11.0.3"  # 12.x removed websockets.asyncio – yfinance still needs it (2025-07-14)
httpx = "^0.27.0"
redis = "^5.0.4"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
feedparser = "^6.0.11"
pandas_ta = "^0.3.14b0"
matplotlib = "^3.10.0"
prometheus-fastapi-instrumentator = "^7.1.0"
twikit = "^2.3.3"
transformers = "^4.53.2"
torch = "^2.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.24.0"

# Poetry's official documentation for optional groups:
# https://python-poetry.org/docs/master/managing-dependencies/#optional-groups

[tool.poetry.group.docs]
optional = true
[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.18"

[tool.poetry.group.finance]
optional = true
[tool.poetry.group.finance.dependencies]
yfinance = "^0.2.38"
stockstats = "^0.6.2"

[tool.poetry.group.memory]
optional = true
[tool.poetry.group.memory.dependencies]
chromadb = "^0.5.0"

[tool.poetry.group.anthropic]
optional = true
[tool.poetry.group.anthropic.dependencies]
langchain-anthropic = "^0.3.17"

[tool.poetry.group.google]
optional = true
[tool.poetry.group.google.dependencies]
langchain-google-genai = "^2.0.0"

[tool.poetry.group.hyperliquid]
optional = true
[tool.poetry.group.hyperliquid.dependencies]

[tool.poetry.group.finnhub]
optional = true
[tool.poetry.group.finnhub.dependencies]

[tool.poetry.group.news]
optional = true
[tool.poetry.group.news.dependencies]

[tool.poetry.group.reddit]
optional = true
[tool.poetry.group.reddit.dependencies]

[tool.poetry.group.twitter]
optional = true
[tool.poetry.group.twitter.dependencies]

[tool.poetry.group.whale_alert]
optional = true
[tool.poetry.group.whale_alert.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
